test/invalid/baseline/callback-semicolon.txt
Syntax error at line 1 in callback-semicolon.webidl, since `callback TotheFuture`:
 TotheFuture = void ()
                      ^ Unterminated callback, expected `;`
